--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Vue.js</h1>
   <div id="app">
-    {{ message }}
+    {{ message * 1.08 + '円' }}
   </div>
   <hr>
   <input type="text" onInput="doAction(event);">
