--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
 <body>
   <h1>Vue.js</h1>
   <div id="app">
-    {{ message * 1.08 + '円' }}
+    {{ message }}
   </div>
   <hr>
-  <input type="text" onInput="doAction(event);">
+  <button onclick="doAction();">
+    click
+  </button>
   <script>
     var data = {
-      message: 'please type!'
+      message: 'Hello Vue!'
     };
 
     var app = new Vue({
       el: '#app',
-      data: data
+      data: data,
+      render: (element)=>{
+        return element("p", data.message);
+      }
     })
 
-  function doAction(event) {
-    data.message = event.target.value;
+  function doAction() {
+    data.message = "You clicked!";
   }
   </script>
 </body>
