--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>my first app</title>
-  <script src="https://unpkg.com/vue"></script>
-</head>
-<body>
-  <h1>Vue.js</h1>
-  <div id="app">
-    {{ message }}
-  </div>
-  <hr>
-  <button onclick="doAction();">
-    click
-  </button>
-  <script>
+  <head>
+    <title>my first app</title>
+    <script src="https://unpkg.com/vue"></script>
+  </head>
+  <body>
+    <h1>Vue.js</h1>
+    <div id="app">
+      <ol v-html="messages"></ol>
+    </div>
+    <hr>
+    <input type="text" onInput="doInput(event);">
+    <button onclick="doAction();">
+      click
+    </button>
+
+    <script>
     var data = {
-      message: 'Hello Vue!'
+      messages: '<li>Hello vue!</li>'
     };
+
 
     var app = new Vue({
       el: '#app',
-      data: data,
-      render: (element)=>{
-        return element("p", data.message);
-      }
-    })
+      data: data
+    });
 
-  function doAction() {
-    data.message = "You clicked!";
-  }
-  </script>
-</body>
+    function doInput(event) {
+      data.message = event.target.value;
+    }
+
+    function doAction(){
+      data.messages = '<li>' + data.message + '</li>' + data.messages;
+    }
+    </script>
+  </body>
 </html>
