--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
   <body>
     <h1>Vue.js</h1>
     <div id="app">
-      <ol v-html="messages"></ol>
+      <p v-bind:style="style">{{ message }}</p>
     </div>
     <hr>
-    <input type="text" onInput="doInput(event);">
-    <button onclick="doAction();">
-      click
-    </button>
+    <input type="number" onChange="doChange(event);" value="20">
 
     <script>
     var data = {
-      messages: '<li>Hello vue!</li>'
+      message: 'Hello vue!',
+      style: 'font-size: 20pt; color: red;'
     };
 
 
@@ -26,12 +24,8 @@
       data: data
     });
 
-    function doInput(event) {
-      data.message = event.target.value;
-    }
-
-    function doAction(){
-      data.messages = '<li>' + data.message + '</li>' + data.messages;
+    function doChange(event){
+      data.style = 'font-size:' + event.target.value + 'pt; color:red;';
     }
     </script>
   </body>
