--- a/index.html
+++ b/index.html
@@ -5,17 +5,37 @@
     <script src="https://unpkg.com/vue"></script>
   </head>
   <body>
+    <style>
+    .red {
+      font-size:20pt;
+      font-weight:bold;
+      font-style:normal;
+      color:red;
+    }
+    .blue {
+      font-size:24pt;
+      font-weight:plain;
+      font-style: italic;
+      color:blue;
+    }
+    </style>
     <h1>Vue.js</h1>
     <div id="app">
-      <p v-bind:style="style">{{ message }}</p>
+      <p v-bind:class="{red:isRed, blue:isBlue}">
+      {{message}}
+      </p>
     </div>
     <hr>
-    <input type="number" onChange="doChange(event);" value="20">
+    <button onclick="doAction();">
+      click
+    </button>
+
 
     <script>
     var data = {
-      message: 'Hello vue!',
-      style: 'font-size: 20pt; color: red;'
+      message: 'Hello Vue!',
+      isRed: true,
+      isBlue: false
     };
 
 
@@ -24,8 +44,10 @@
       data: data
     });
 
-    function doChange(event){
-      data.style = 'font-size:' + event.target.value + 'pt; color:red;';
+
+    function doAction() {
+      data.isRed = !data.isRed;
+      data.isBlue = !data.isBlue;
     }
     </script>
   </body>
