--- a/index.html
+++ b/index.html
@@ -5,50 +5,31 @@
     <script src="https://unpkg.com/vue"></script>
   </head>
   <body>
-    <style>
-    .red {
-      font-size:20pt;
-      font-weight:bold;
-      font-style:normal;
-      color:red;
-    }
-    .blue {
-      font-size:24pt;
-      font-weight:plain;
-      font-style: italic;
-      color:blue;
-    }
-    </style>
     <h1>Vue.js</h1>
     <div id="app">
-      <p v-bind:class="{red:isRed, blue:isBlue}">
+      <p v-bind:style="styles">
       {{message}}
       </p>
     </div>
-    <hr>
-    <button onclick="doAction();">
-      click
-    </button>
 
 
     <script>
-    var data = {
-      message: 'Hello Vue!',
-      isRed: true,
-      isBlue: false
-    };
+      var data = {
+        message: 'Hello Vue!',
+        styles: {
+          margin:'10px',
+          padding:'5px 20px',
+          fontSize:'20pt', 
+          color:'red',
+          backgroundColor:'#fee',
+          border:'3px solid blue'
+        }
+      };
 
 
-    var app = new Vue({
-      el: '#app',
-      data: data
-    });
-
-
-    function doAction() {
-      data.isRed = !data.isRed;
-      data.isBlue = !data.isBlue;
-    }
+      var app = new Vue({
+        el: '#app',
+        data: data
+      });
     </script>
-  </body>
 </html>
